fixed alignment

--- a/aniketthreejsportfolio/about.css
+++ b/aniketthreejsportfolio/about.css
@@ -6,6 +6,7 @@ body, html {
   margin: 0;
   padding: 0;
   height: 100%;
+  overflow: hidden; /* Hide scrollbars */
 }
 
 nav {
@@ -32,8 +33,10 @@ nav a:hover {
   color: grey;
 }
 
-.title {
+.title-container {
   font-weight: bold;
+  font-size: 1.2rem;
+  margin-top: 1rem;
 }
 
 .about-content {
@@ -81,4 +84,22 @@ footer {
   position: fixed;
   bottom: 0;
   left: 0;
+}
+
+@media only screen and (max-width: 768px) {
+  nav {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .links-container {
+    margin-top: 0rem;
+    margin-left: -0.5rem;
+  }
+
+  .title-container {
+    margin-top: 1rem;
+    margin-left: 1rem;
+  }
 }
