--- a/aniketthreejsportfolio/blog.css
+++ b/aniketthreejsportfolio/blog.css
@@ -122,5 +122,16 @@ body, html {
     text-decoration: none;
     cursor: pointer;
   }
+
+  @media only screen and (max-width: 768px) {
+    nav {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
   
+    .links-container {
+      margin-top: 1rem;
+    }
+  }
   
